--- a/package.json
+++ b/package.json
@@ -2,18 +2,32 @@
   "name": "operai-web-app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-script": "^2.0.5",
-    "react-scripts": "^5.0.1"
-  },
   "scripts": {
     "start": "react-scripts start",
-    "build": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.37.4",
+    "resolve-url-loader": "^5.0.0"
+  },
+  "overrides": {
+    "svgo": "^2.8.0",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.31",
+    "css-select": "^4.3.0",
+    "resolve-url-loader": "^5.0.0"
   },
   "eslintConfig": {
     "extends": [
@@ -32,12 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
-    "eslint": "^8.57.1",
-    "eslint-config-react-app": "^7.0.1",
-    "web-vitals": "^4.2.4"
   }
 }
