--- a/package.json
+++ b/package.json
@@ -1,34 +1,55 @@
 {
   "name": "cantieri-web-app",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "This project was bootstrapped with Create React App.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dastechimpianti/operai-web-app.git"
+    "url": "git+https://github.com/dastechimpianti/cantieri-web-app.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/dastechimpianti/operai-web-app/issues"
+    "url": "https://github.com/dastechimpianti/cantieri-web-app/issues"
   },
-  "homepage": "https://github.com/dastechimpianti/operai-web-app#readme",
+  "homepage": "https://github.com/dastechimpianti/cantieri-web-app#readme",
   "dependencies": {
     "@svgr/plugin-svgo": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
     "nth-check": "^2.1.1",
     "postcss": "^8.5.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "resolve-url-loader": "^5.0.0",
     "svgo": "^3.3.2",
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react-scripts": "^5.0.1"
+  },
+  "overrides": {
+    "svgo": "^3.3.2",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.5.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
